--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="title">
 
         <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="">Contatti</a>
