--- a/index.html
+++ b/index.html
@@ -4,44 +4,53 @@
 <head>
     <meta charset="utf-8">
     <title>TinDog</title>
-    <link rel="stylesheet" href="css/styles.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;700;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
     <section id="title">
-
-        <!-- Nav Bar -->
-        <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
-            <a class="navbar-brand" href="">TinDog</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid">
+            <!-- Nav Bar -->
+            <nav class="navbar sticky-top navbar-expand-lg navbar-dark" id="navbar">
+                <a class="navbar-brand" href="">TinDog</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Contatti</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Prezzi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Download</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Contatti</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Prezzi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Download</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- Title -->
+            <div class="row">
+                <div class="col-md-6">
+                    <h1 class="h1-title">Meet new and interesting dogs nearby.</h1>
+                    <button type="button">Download</button>
+                    <button type="button">Download</button>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/iphone6.png" alt="iphone-mockup">
+                </div>
             </div>
-        </nav>
-        <!-- Title -->
-
-        <div>
-            <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button">Download</button>
-            <button type="button">Download</button>
-        </div>
-        <div>
-            <img src="images/iphone6.png" alt="iphone-mockup">
         </div>
 
     </section>
