--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="h1-title">Meet new and interesting dogs nearby.</h1>
-                    <button type="button">Download</button>
-                    <button type="button">Download</button>
+                    <button type="button" class="btn btn-dark">Download</button>
+                    <button type="button" class="btn btn-outline-dark">Download</button>
                 </div>
                 <div class="col-md-6">
                     <img src="images/iphone6.png" alt="iphone-mockup">
