--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;700;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/d46dfd578e.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -44,8 +46,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="h1-title">Meet new and interesting dogs nearby.</h1>
-                    <button type="button" class="btn btn-dark">Download</button>
-                    <button type="button" class="btn btn-outline-dark">Download</button>
+                    <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
+                    <button type="button" class="btn btn-outline-light btn-lg">Download</button>
                 </div>
                 <div class="col-md-6">
                     <img src="images/iphone6.png" alt="iphone-mockup">
