--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;700;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/d46dfd578e.js" crossorigin="anonymous"></script>
 
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar sticky-top navbar-expand-lg navbar-dark" id="navbar">
-                <a class="navbar-brand" href="">TinDog</a>
+                <a class="navbar-brand" href="">tinDog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -46,11 +46,11 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="h1-title">Meet new and interesting dogs nearby.</h1>
-                    <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i> Download</button>
-                    <button type="button" class="btn btn-outline-light btn-lg">Download</button>
+                    <button type="button" class="btn btn-dark btn-lg button-download"><i class="fa-brands fa-apple"></i> Download</button>
+                    <button type="button" class="btn btn-outline-light btn-lg button-download"><i class="fa-brands fa-google-play"></i> Download</button>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/iphone6.png" alt="iphone-mockup">
+                    <img class="img-title" src="images/iphone6.png" alt="iphone-mockup">
                 </div>
             </div>
         </div>
@@ -61,15 +61,22 @@
     <!-- Features -->
 
     <section id="features">
+        <div class="row">
+            <div class="col-lg-4 feature-box">
+                <h3>Easy to use.</h3>
+                <p>So easy to use, even your dog could do it.</p>
+            </div>
+            <div class="col-lg-4 feature-box">
+                <h3>Elite Clientele</h3>
+                <p>We have all the dogs, the greatest dogs.</p>
+            </div>
+            <div class="col-lg-4 feature-box">
+                <h3>Guaranteed to work.</h3>
+                <p>Find the love of your dog's life or your money back.</p>
+            </div>
+        </div>
 
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
 
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
 
     </section>
 
