Aggiunte ultime due sezioni

--- a/index.html
+++ b/index.html
@@ -180,18 +180,29 @@
 
     <section id="cta">
 
-        <h3>Find the True Love of Your Dog's Life Today.</h3>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-
+        <h3 class="cta-title">Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button" class="btn btn-dark btn-lg button-download"><i class="fa-brands fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg button-download"><i class="fa-brands fa-google-play"></i> Download</button>
     </section>
 
 
     <!-- Footer -->
 
     <footer id="footer">
+        <a class="social-icon" href="">
+            <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a class="social-icon href=" ">
+            <i class="fa-brands fa-facebook "></i>
+        </a>
+        <a class="social-icon href="">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a class="social-icon href=" ">
+            <i class="fa-solid fa-envelope "></i>
+        </a>
 
-        <p>© Copyright TinDog</p>
+        <p class="copyright-text ">© Copyright TinDog 2022</p>
 
     </footer>
 
