Aggiunto link pagina

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="">Contatti</a>
+                            <a class="nav-link" href="#footer">Contatti</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Prezzi</a>
+                            <a class="nav-link" href="#pricing">Prezzi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Download</a>
+                            <a class="nav-link" href="#cta">Download</a>
                         </li>
                     </ul>
                 </div>
