--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar sticky-top navbar-expand-lg navbar-dark" id="navbar">
-                <a class="navbar-brand" href="">tinDog</a>
+                <a class="navbar-brand" href=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
