--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="https://kit.fontawesome.com/d46dfd578e.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -24,7 +26,7 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar sticky-top navbar-expand-lg navbar-dark" id="navbar">
-                <a class="navbar-brand" href=""></a>
+                <a class="navbar-brand" href=""><img src="images/navBrand.jpg" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -43,14 +45,13 @@
                 </div>
             </nav>
             <!-- Title -->
-            <div class="row">
+            <div class="row title-container-text">
                 <div class="col-md-6">
-                    <h1 class="h1-title">Meet new and interesting dogs nearby.</h1>
-                    <button type="button" class="btn btn-dark btn-lg button-download"><i class="fa-brands fa-apple"></i> Download</button>
-                    <button type="button" class="btn btn-outline-light btn-lg button-download"><i class="fa-brands fa-google-play"></i> Download</button>
+                    <h1 class="h1-title">I'm Nicola Derocchi</h1>
+                    <h2 class="descrizione-subtitle">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</h2>
                 </div>
-                <div class="col-md-6">
-                    <img class="img-title" src="images/iphone6.png" alt="iphone-mockup">
+                <div class="col-md-6 profile-container">
+                    <img class="profile-picture" src="images/stick.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -64,18 +65,18 @@
         <div class="row">
             <div class="col-lg-4 feature-box">
                 <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
-                <h3>Easy to use.</h3>
-                <p>So easy to use, even your dog could do it.</p>
+                <h3 class="feature-text">Easy to use.</h3>
+                <p class="feature-text">So easy to use, even your dog could do it.</p>
             </div>
             <div class="col-lg-4 feature-box">
                 <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
-                <h3>Elite Clientele</h3>
-                <p>We have all the dogs, the greatest dogs.</p>
+                <h3 class="feature-text">Elite Clientele</h3>
+                <p class="feature-text">We have all the dogs, the greatest dogs.</p>
             </div>
             <div class="col-lg-4 feature-box">
                 <i class="fa-solid fa-heart fa-4x feature-icon"></i>
-                <h3>Guaranteed to work.</h3>
-                <p>Find the love of your dog's life or your money back.</p>
+                <h3 class="feature-text">Guaranteed to work.</h3>
+                <p class="feature-text">Find the love of your dog's life or your money back.</p>
             </div>
         </div>
 
@@ -108,14 +109,6 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
               </button>
         </div>
-    </section>
-    <!-- Press -->
-    <section id="press">
-        <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
-        <img class="press-img" src="images/tnw.png" alt="tnw-logo">
-        <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
-        <img class="press-img" src="images/mashable.png" alt="mashable-logo">
-
     </section>
     <!-- Pricing -->
     <section id="pricing">
