Inizio modifiche personalizzazione

--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
                             <a class="nav-link" href="#footer">Contatti</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#pricing">Prezzi</a>
+                            <a class="nav-link" href="#skills">Competenze</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#cta">Download</a>
+                            <a class="nav-link" href="#istruzione">Istruzione</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#esperienze">Esperienze lavorative</a>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +64,7 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section id="istruzione">
         <div class="row">
             <div class="col-lg-4 feature-box">
                 <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
@@ -79,15 +82,12 @@
                 <p class="feature-text">Lorem ipsum dolor sit amet.</p>
             </div>
         </div>
-
-
-
     </section>
 
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section id="esperienze">
 
         <div id="carousel" class="carousel slide" data-ride="false">
             <div class="carousel-inner">
@@ -111,7 +111,7 @@
         </div>
     </section>
     <!-- Pricing -->
-    <section id="pricing">
+    <section id="skills">
 
         <h2>Lorem ipsum dolor sit amet</h2>
         <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -171,7 +171,7 @@
 
     <!-- Call to Action -->
 
-    <section id="cta">
+    <section id="contacts">
 
         <h3 class="cta-title">Et molestiae voluptatem qui eligendi.</h3>
         <h2 class="descrizione-subtitle-cta">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</h2>
