--- a/index.html
+++ b/index.html
@@ -62,105 +62,111 @@
     </section>
 
 
-    <!-- Features -->
+    <!-- Istruzione -->
 
     <section id="istruzione">
-        <div class="row">
-            <div class="col-lg-4 feature-box">
-                <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
-                <h3 class="feature-text">Easy to use.</h3>
-                <p class="feature-text">Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="col-lg-4 feature-box">
-                <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
-                <h3 class="feature-text">Elite Clientele</h3>
-                <p class="feature-text">Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="col-lg-4 feature-box">
-                <i class="fa-solid fa-heart fa-4x feature-icon"></i>
-                <h3 class="feature-text">Guaranteed to work.</h3>
-                <p class="feature-text">Lorem ipsum dolor sit amet.</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4 feature-box">
+                    <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
+                    <h3 class="feature-text">Easy to use.</h3>
+                    <p class="feature-text">Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="col-lg-4 feature-box">
+                    <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
+                    <h3 class="feature-text">Elite Clientele</h3>
+                    <p class="feature-text">Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="col-lg-4 feature-box">
+                    <i class="fa-solid fa-heart fa-4x feature-icon"></i>
+                    <h3 class="feature-text">Guaranteed to work.</h3>
+                    <p class="feature-text">Lorem ipsum dolor sit amet.</p>
+                </div>
             </div>
         </div>
     </section>
 
 
-    <!-- Testimonials -->
+    <!-- Esperienze lavorative -->
 
     <section id="esperienze">
-
-        <div id="carousel" class="carousel slide" data-ride="false">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <h2>Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
-                    <img class="testimonial-image" src="images/stick.jpg" alt="dog-profile">
-                    <em>Pebbles, New York</em>
+        <div class="container-fluid">
+            <div id="carousel" class="carousel slide" data-ride="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <h2>Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+                        <img class="testimonial-image" src="images/stick.jpg" alt="dog-profile">
+                        <em>Pebbles, New York</em>
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="testimonial-text">Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+                        <img class="testimonial-image" src="images/stick.jpg" alt="lady-profile">
+                        <em>Beverly, Illinois</em>
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <h2 class="testimonial-text">Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
-                    <img class="testimonial-image" src="images/stick.jpg" alt="lady-profile">
-                    <em>Beverly, Illinois</em>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
               </button>
+            </div>
         </div>
     </section>
-    <!-- Pricing -->
+
+    <!-- Skills -->
+
     <section id="skills">
-
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <div class="row">
-            <div class="col-lg-4 col-md-6 pricing-col">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Plan 1</h3>
-                    </div>
-                    <div class="card-body">
-                        <h2>Free</h2>
-                        <p>5 Matches Per Day</p>
-                        <p>10 Messages Per Day</p>
-                        <p>Unlimited App Usage</p>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-lg btn-outline-dark" type="button">Sign Up</button>
+        <div class="container-fluid">
+            <h2>Lorem ipsum dolor sit amet</h2>
+            <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 pricing-col">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Plan 1</h3>
+                        </div>
+                        <div class="card-body">
+                            <h2>Free</h2>
+                            <p>5 Matches Per Day</p>
+                            <p>10 Messages Per Day</p>
+                            <p>Unlimited App Usage</p>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-lg btn-outline-dark" type="button">Sign Up</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-6 pricing-col">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Plan 2</h3>
-                    </div>
-                    <div class="card-body">
-                        <h2>$49 / mo</h2>
-                        <p>Unlimited Matches</p>
-                        <p>Unlimited Messages</p>
-                        <p>Unlimited App Usage</p>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                <div class="col-lg-4 col-md-6 pricing-col">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Plan 2</h3>
+                        </div>
+                        <div class="card-body">
+                            <h2>$49 / mo</h2>
+                            <p>Unlimited Matches</p>
+                            <p>Unlimited Messages</p>
+                            <p>Unlimited App Usage</p>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 pricing-col">
-                <div class="card">
-                    <div class="card-header">
-                        <h3>Plan 3</h3>
-                    </div>
-                    <div class="card-body">
-                        <h2>$99 / mo</h2>
-                        <p>Pirority Listing</p>
-                        <p>Unlimited Matches</p>
-                        <p>Unlimited Messages</p>
-                        <p>Unlimited App Usage</p>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                <div class="col-lg-4 pricing-col">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Plan 3</h3>
+                        </div>
+                        <div class="card-body">
+                            <h2>$99 / mo</h2>
+                            <p>Pirority Listing</p>
+                            <p>Unlimited Matches</p>
+                            <p>Unlimited Messages</p>
+                            <p>Unlimited App Usage</p>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -169,35 +175,38 @@
     </section>
 
 
-    <!-- Call to Action -->
+    <!-- Contatti -->
 
     <section id="contacts">
-
-        <h3 class="cta-title">Et molestiae voluptatem qui eligendi.</h3>
-        <h2 class="descrizione-subtitle-cta">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</h2>
-        <button type="button" class="btn btn-dark btn-lg button-download"><i class="fa-brands fa-apple"></i> Download</button>
-        <button type="button" class="btn btn-outline-light btn-lg button-download"><i class="fa-brands fa-google-play"></i> Download</button>
+        <div class="container-fluid">
+            <h3 class="cta-title">Mettiti in contatto.</h3>
+            <h2 class="descrizione-subtitle-cta">Se desideri metterti in contatto con me premi il pulsante di seguito, potrai così inviarmi una mail.</h2>
+            <a href="mailto:nicoladerocchi3@gmail.com">
+                <button type="button" class="btn btn-dark btn-lg button-contact-me"><i class="fa-solid fa-envelope envelope-icon-btn-download"></i> Contattami</button>
+            </a>
+        </div>
     </section>
 
 
     <!-- Footer -->
 
     <footer id="footer">
-        <a class="social-icon" href="">
-            <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a class="social-icon href=" ">
-            <i class="fa-brands fa-facebook "></i>
-        </a>
-        <a class="social-icon href="">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a class="social-icon href=" ">
-            <i class="fa-solid fa-envelope "></i>
-        </a>
+        <div class="container-fluid">
+            <a class="social-icon" href="https://github.com/NicolaDerocchi22">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a class="social-icon" href="mailto:nicoladerocchi3@gmail.com">
+                <i class="fa-solid fa-envelope "></i>
+            </a>
+            <a class="social-icon" href="">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a class="social-icon" href="https://www.linkedin.com/in/nicola-derocchi-632838223/">
+                <i class="fa-brands fa-linkedin "></i>
+            </a>
 
-        <p class="copyright-text ">© Copyright TinDog 2022</p>
-
+            <p class="copyright-text ">©Copyright NicolaDerocchi 2022</p>
+        </div>
     </footer>
 
 
