--- a/index.html
+++ b/index.html
@@ -66,21 +66,17 @@
 
     <section id="istruzione">
         <div class="container-fluid">
+            <h2 class="istruzione-title">Istruzione e formazione</h2>
             <div class="row">
-                <div class="col-lg-4 feature-box">
+                <div class="col-lg-6 feature-box">
                     <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
-                    <h3 class="feature-text">Easy to use.</h3>
-                    <p class="feature-text">Lorem ipsum dolor sit amet.</p>
+                    <h3 class="feature-text">Diploma d'istruzione superiore.</h3>
+                    <p class="feature-text">Istituto d'istruzione superiore Olivelli Putelli Darfo Boario Terme.<br>Indirizzo: Informatica e telecomunicazioni.</p>
                 </div>
-                <div class="col-lg-4 feature-box">
+                <div class="col-lg-6 feature-box">
                     <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
-                    <h3 class="feature-text">Elite Clientele</h3>
-                    <p class="feature-text">Lorem ipsum dolor sit amet.</p>
-                </div>
-                <div class="col-lg-4 feature-box">
-                    <i class="fa-solid fa-heart fa-4x feature-icon"></i>
-                    <h3 class="feature-text">Guaranteed to work.</h3>
-                    <p class="feature-text">Lorem ipsum dolor sit amet.</p>
+                    <h3 class="feature-text">First Certificate</h3>
+                    <p class="feature-text">Istituto d'istruzione superiore Olivelli Putelli Darfo Boario Terme.</p>
                 </div>
             </div>
         </div>
@@ -205,7 +201,8 @@
                 <i class="fa-brands fa-linkedin "></i>
             </a>
 
-            <p class="copyright-text ">©Copyright NicolaDerocchi 2022</p>
+            <p class="copyright-text">@NicolaDerocchi 2022</p>
+            <p class="copyright-text">Tel: +39 3486933578</p>
         </div>
     </footer>
 
