--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700;900&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;700;900&family=Ubuntu:wght@400;700&family=Whisper&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/d46dfd578e.js" crossorigin="anonymous"></script>
 
@@ -69,12 +69,12 @@
             <h2 class="istruzione-title">Istruzione e formazione</h2>
             <div class="row">
                 <div class="col-lg-6 feature-box">
-                    <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
+                    <i class="fa-solid fa-graduation-cap fa-4x feature-icon"></i>
                     <h3 class="feature-text">Diploma d'istruzione superiore.</h3>
                     <p class="feature-text">Istituto d'istruzione superiore Olivelli Putelli Darfo Boario Terme.<br>Indirizzo: Informatica e telecomunicazioni.</p>
                 </div>
                 <div class="col-lg-6 feature-box">
-                    <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
+                    <i class="fa-solid fa-book-open-reader fa-4x feature-icon"></i>
                     <h3 class="feature-text">First Certificate</h3>
                     <p class="feature-text">Istituto d'istruzione superiore Olivelli Putelli Darfo Boario Terme.</p>
                 </div>
@@ -90,14 +90,20 @@
             <div id="carousel" class="carousel slide" data-ride="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <h2>Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+                        <h2 class="esperienze-title">Periodo</h2>
+                        <h4 class="descrizione-description">Descrizione esperienza lavorativa</h4>
+                        <h4 class="descrizione-description">Descrizione esperienza lavorativa</h4>
+                        <h4 class="descrizione-description">Descrizione esperienza lavorativa</h4>
                         <img class="testimonial-image" src="images/stick.jpg" alt="dog-profile">
-                        <em>Pebbles, New York</em>
+                        <em>Nome azienda</em>
                     </div>
                     <div class="carousel-item">
-                        <h2 class="testimonial-text">Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+                        <h2 class="esperienze-title">Periodo</h2>
+                        <h4 class="descrizione-description">Descrizione esperienza lavorativa</h4>
+                        <h4 class="descrizione-description">Descrizione esperienza lavorativa</h4>
+                        <h4 class="descrizione-description">Descrizione esperienza lavorativa</h4>
                         <img class="testimonial-image" src="images/stick.jpg" alt="lady-profile">
-                        <em>Beverly, Illinois</em>
+                        <em>Nome azienda</em>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -127,9 +133,6 @@
                             <p>5 Matches Per Day</p>
                             <p>10 Messages Per Day</p>
                             <p>Unlimited App Usage</p>
-                            <div class="d-grid gap-2">
-                                <button class="btn btn-lg btn-outline-dark" type="button">Sign Up</button>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -143,13 +146,10 @@
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
-                            <div class="d-grid gap-2">
-                                <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
-                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 pricing-col">
+                <div class="col-lg-4 col-md-6 pricing-col">
                     <div class="card">
                         <div class="card-header">
                             <h3>Plan 3</h3>
@@ -160,9 +160,48 @@
                             <p>Unlimited Matches</p>
                             <p>Unlimited Messages</p>
                             <p>Unlimited App Usage</p>
-                            <div class="d-grid gap-2">
-                                <button class="btn btn-lg btn-dark" type="button">Sign Up</button>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 pricing-col">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Plan 1</h3>
+                        </div>
+                        <div class="card-body">
+                            <h2>Free</h2>
+                            <p>5 Matches Per Day</p>
+                            <p>10 Messages Per Day</p>
+                            <p>Unlimited App Usage</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 pricing-col">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Plan 2</h3>
+                        </div>
+                        <div class="card-body">
+                            <h2>$49 / mo</h2>
+                            <p>Unlimited Matches</p>
+                            <p>Unlimited Messages</p>
+                            <p>Unlimited App Usage</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 pricing-col">
+                    <div class="card">
+                        <div class="card-header">
+                            <h3>Plan 3</h3>
+                        </div>
+                        <div class="card-body">
+                            <h2>$99 / mo</h2>
+                            <p>Pirority Listing</p>
+                            <p>Unlimited Matches</p>
+                            <p>Unlimited Messages</p>
+                            <p>Unlimited App Usage</p>
                         </div>
                     </div>
                 </div>
