Modifica stile bottone

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <h3 class="cta-title">Mettiti in contatto.</h3>
             <h2 class="descrizione-subtitle-cta">Se desideri metterti in contatto con me premi il pulsante di seguito, potrai così inviarmi una mail.</h2>
             <a href="mailto:nicoladerocchi3@gmail.com">
-                <button type="button" class="btn btn-dark btn-lg button-contact-me"><i class="fa-solid fa-envelope envelope-icon-btn-download"></i> Contattami</button>
+                <button type="button" class="btn btn-outline-light btn-lg button-contact-me"><i class="fa-solid fa-envelope envelope-icon-btn-download"></i> Contattami</button>
             </a>
         </div>
     </section>
