--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar sticky-top navbar-expand-lg navbar-dark" id="navbar">
-                <a class="navbar-brand" href=""><img src="images/navBrand.jpg" alt="Logo"></a>
+                <a class="navbar-brand h1-title" href="#title">Nicola Derocchi</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -50,7 +50,6 @@
             <!-- Title -->
             <div class="row title-container-text">
                 <div class="col-md-6">
-                    <h1 class="h1-title">I'm Nicola Derocchi</h1>
                     <h2 class="descrizione-subtitle">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</h2>
                 </div>
                 <div class="col-md-6 profile-container">
