--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <section id="skills">
         <div class="container-fluid skills-container">
-            <h2 class="skills-header">Capacità e competenze</h2>
+            <h2 class="skills-header">Abilità e competenze</h2>
             <p>Di seguito le abilità e capacità che ho acquisito durante le mie esperienze lavorative e scolastiche.</p>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 pricing-col">
